css/terminal.css
@keyframes terminal-blinking
{
    0%
    {
        color: var(--color-text);
    }
    49%
    {
        color: var(--color-text);
    }
    60%
    {
        color: transparent;
    }
    99%
    {
        color: transparent;
    }
    100%
    {
        color: var(--color-text);
    }
}

.terminal
{
    min-width: 50vw;
    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.25);
}

.terminal-header
{
    background-color: #3d3846;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    max-height: 2.5em;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
}

.terminal-button-close
{
    display: flex;
}

.terminal-button-close::before
{
    content: "•";
    color: var(--color-red);
    font-size: 4em;
    margin-right: 6px;
    text-shadow: none;
}

.terminal-button-close:hover::before
{
    text-shadow: 0 0 10px var(--color-red);
}

.terminal-body
{
    background-color: var(--color-background);
    padding: 6px;
}

.terminal-blinking
{
    animation-duration: 1.2s;
    animation-iteration-count: infinite;
    animation-name: terminal-blinking;
    text-shadow: none;
}

